# NGoT-sprints

./: .dockerignore  Dockerfile  docker-compose.yml  mlflow.db  pyproject.toml
app/: main.py  predictor.py  schemas.py
data/raw/: logistics_eta.csv
metrics/: scores.json
mlartifacts/1/models/m-074bf5800ee94ebc99494c8376522570/artifacts/: MLmodel
mlartifacts/1/models/m-25e17a8ed46342bfa2b5bf5047d28068/artifacts/: MLmodel
mlartifacts/1/models/m-3aea1e0ce96b45dfb5e2f4f4d1297b92/artifacts/: MLmodel
mlartifacts/1/models/m-592e84dc857d42ac874cdd007b8c2b50/artifacts/: MLmodel
mlartifacts/1/models/m-59e788961b8f4de2bfe009ba77af1315/artifacts/: MLmodel  conda.yaml
mlartifacts/1/models/m-61f6b7f6d02144f1879f8d7625ee11ea/artifacts/: MLmodel
mlartifacts/1/models/m-668270c35f4647a6ae5b272859f06763/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-a179cf3bb98b4665bd6b84cef6babaf9/artifacts/: MLmodel  serving_input_example.json
mlartifacts/1/models/m-a1afe9b49b2e4adeb308e05b146a9108/artifacts/: MLmodel
mlartifacts/1/models/m-a9db1f4d65da47e88b8b5b88e0742aec/artifacts/: MLmodel  input_example.json
mlartifacts/1/models/m-b142f64f8fe64b6f821d95b9109c0e81/artifacts/: MLmodel
mlartifacts/1/models/m-b23b909c2d324459bfc73c7e963125ca/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-d28966be7b9449e3b3312705c7232623/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-d4dc743161f14d16bbbbbf715059a68a/artifacts/: MLmodel  model.pkl
models/: eta_model_38225bfc.joblib
scripts/: generate_data.py  train.py
tests/: test_api.py  test_schemas.py
(+1 files in other folders)
